crates/rekindle-client/tests/ui/fail/missing_field.rs
use rekindle_client::ClientOptions;

fn main() {
    let _ = ClientOptions { handoff: None };
}
